# docnerd

./: .gitignore  README.md  REQUIREMENTS.md  action.yml  config.example.yaml  pyproject.toml  requirements.txt
.github/workflows/: docnerd.yml  test.yml
docnerd/: __init__.py  analyzer.py  branch_validator.py  comment_parser.py  config.py  doc_generator.py  docnerd_cache.py  docs_fetcher.py  github_client.py  llm_context.py  main.py  phased_pipeline.py  pr_creator.py  review_loop.py  rules_engine.py
docs/: DOC_GENERATION.md  SECRETS_SETUP.md
rules/: doc_generation.yaml  structure.yaml  style.yaml  terminology.yaml
tests/: test_analyzer_terms.py  test_comment_parser.py  test_docnerd_cache.py  test_docs_fetcher_prioritize.py  test_imports.py  test_llm_context.py  test_main_run_trigger_path.py  test_review_loop.py
